--- a/exercicios/ex024/grid02.html
+++ b/exercicios/ex024/grid02.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +8,39 @@
     <title>Layout com CSS Grid</title>
 </head>
 <body>
-    
+    <header class="header">
+        <a href="#" class="header__logo">Logo</a>
+        <nav>
+            <ul class="menu">
+                <li><a href="#" class="menu__items">Produtos</a></li>
+                <li><a href="#" class="menu__items">Sobre</a></li>
+                <li><a href="#" class="menu__items">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main class="main">
+        <section class="main__video">
+            <img src="imagens/lobo1.jpg" alt="Vídeo">
+            <h2>Como criar sites.</h2>
+        </section>
+        <section class="main__sidebar">
+            <div class="sidebar__video">
+                <img src="imagens/lobo1.jpg" alt="Lobo01">
+                <p>Legenda</p>
+            </div>
+            <div class="sidebar__video">
+                <img src="imagens/lobo2.jpg" alt="Lobo02">
+                <p>Legenda</p>
+            </div>
+            <div class="sidebar__video">
+                <img src="imagens/lobo3.jpg" alt="Lobo03">
+                <p>Legenda</p>
+            </div>
+            <div class="sidebar__video">
+                <img src="imagens/lobo1.jpg" alt="Lobo04">
+                <p>Legenda</p>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
