--- a/desafios/d012/index.html
+++ b/desafios/d012/index.html
@@ -106,7 +106,7 @@
         </section>
     </main>
     <footer id="footer">
-        <p>Site criado por <a href="https://github.com/arthurpestana">Arthur Henrique Pestana Schneider</a> para o <a href="https://www.youtube.com/playlist?list=PLHz_AreHm4dmcAviDwiGgHbeEJToxbOpZ">Curso de HTML e CSS</a> do <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo">CursoemVideo</a></p>
+        <p>Site criado por <a href="https://github.com/arthurpestana" target="_blank" rel="external">Arthur Henrique Pestana Schneider</a> para o <a href="https://www.youtube.com/playlist?list=PLHz_AreHm4dmcAviDwiGgHbeEJToxbOpZ" target="_blank" rel="external">Curso de HTML e CSS</a> do <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank" rel="external">CursoemVideo</a></p>
     </footer>
 </body>
 </html>
