--- a/exercicios/ex027/tabela02.html
+++ b/exercicios/ex027/tabela02.html
@@ -30,6 +30,12 @@
             background-color: lightgray;
         }
 
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: lightgrey;
+        }
+
         td, th {
             border: 1px solid black;
             vertical-align: center;
@@ -42,6 +48,10 @@
 
         .number {
             text-align: right;
+        }
+
+        p {
+            width: 300px;
         }
     </style>
 </head>
@@ -95,5 +105,8 @@
             </tr>
         </tfoot>
     </table>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit aperiam qui repudiandae exercitationem, sint et voluptate atque neque saepe asperiores aspernatur maiores totam id dolor quis optio esse iusto explicabo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, cum maxime. Temporibus ea alias nesciunt non ipsum molestias, et perferendis ullam vel reprehenderit laudantium, minus provident a aliquam minima error. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quisquam saepe alias quis reiciendis, eveniet ea commodi ipsa cumque rem deserunt? Iusto molestias voluptas soluta necessitatibus minima ad quae blanditiis.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit aperiam qui repudiandae exercitationem, sint et voluptate atque neque saepe asperiores aspernatur maiores totam id dolor quis optio esse iusto explicabo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, cum maxime. Temporibus ea alias nesciunt non ipsum molestias, et perferendis ullam vel reprehenderit laudantium, minus provident a aliquam minima error. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quisquam saepe alias quis reiciendis, eveniet ea commodi ipsa cumque rem deserunt? Iusto molestias voluptas soluta necessitatibus minima ad quae blanditiis.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit aperiam qui repudiandae exercitationem, sint et voluptate atque neque saepe asperiores aspernatur maiores totam id dolor quis optio esse iusto explicabo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, cum maxime. Temporibus ea alias nesciunt non ipsum molestias, et perferendis ullam vel reprehenderit laudantium, minus provident a aliquam minima error. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quisquam saepe alias quis reiciendis, eveniet ea commodi ipsa cumque rem deserunt? Iusto molestias voluptas soluta necessitatibus minima ad quae blanditiis.</p>
 </body>
 </html>
