--- a/desafios/d015/index.html
+++ b/desafios/d015/index.html
@@ -31,5 +31,35 @@
         <h1>Por que somos diferentes?</h1>
         <p>Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
     </header>
+    <section class="metricas">
+        <div class="metricas__me1">
+            <h1>400+</h1>
+            <span>Projetos concluídos</span>
+            <p>Nós ajudamos a construir mais de 400 projetos incríveis.</p>
+        </div>
+        <div class="metricas__me2">
+            <h1>100+</h1>
+            <span>Colaboradores</span>
+            <p>Temos mais de 100 colaboradores no nosso time que se preocupam com nossos clientes.</p>
+        </div>
+        <div class="metricas__me3">
+            <h1>20k</h1>
+            <span>Downloads</span>
+            <p>Nossos projetos que estão disponíveis em lojas já foram baixados mais de 20.000 vezes.</p>
+        </div>
+        <div class="metricas__me4">
+            <h1>500+</h1>
+            <span>Reviews 5 estrelas</span>
+            <p>Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em nossos produtos.</p>
+        </div>
+    </section>
+    <main class="vagas">
+        <span>Vagas Abertas</span>
+        <h2>Estamos procurando por talentos</h2>
+        <p>Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
+        <div class="vagas__img">
+            <img src="images/vagas.png" alt="Imagem representativa da empresa.">
+        </div>
+    </main>
 </body>
 </html>
