--- a/desafios/d015/index.html
+++ b/desafios/d015/index.html
@@ -53,13 +53,68 @@
             <p>Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em nossos produtos.</p>
         </div>
     </section>
-    <main class="vagas">
+    <main class="main__vagas">
         <span>Vagas Abertas</span>
         <h2>Estamos procurando por talentos</h2>
         <p>Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
-        <div class="vagas__img">
+        <div class="main__img">
             <img src="images/vagas.png" alt="Imagem representativa da empresa.">
         </div>
+        <section class="vagas">
+            <article class="vagas__design">
+                <h3>Design</h3>
+                <div class="vagas__design--product">
+                    <h4>Product Design</h4>
+                    <span>Full-Time</span>
+                    <span>Faixa salarial: R$6.000</span>
+                </div>
+                <div class="vagas__design--ux">
+                    <h4>UX Designer</h4>
+                    <span>Full-Time</span>
+                    <span>Faixa salarial: R$6.000</span>
+                </div>
+            </article>
+            <article class="vagas__prog">
+                <h3>Desenvolvimento de Software</h3>
+                <div class="vagas__prog--ios">
+                    <h4>Desenvolvedor(a) iOS</h4>
+                    <span>Full-Time</span>
+                    <span>Faixa salarial: R$8.000</span>
+                </div>
+                <div class="vagas__prog--front">
+                    <h4>Desenvolvedor(a) Front-End</h4>
+                    <span>Full-Time</span>
+                    <span>Faixa salarial: R$7.000</span>
+                </div>
+                <div class="vagas__prog--back">
+                    <h4>Desenvolvedor(a) Back-End</h4>
+                    <span>Full-Time</span>
+                    <span>Faixa salarial: R$8.000</span>
+                </div>
+            </article>
+        </section>
     </main>
+    <section class="depoiment">
+        <article class="depoiment__box">
+            <p>Veja o que nossos colaboradores falam sobre nós</p>
+            <h1>OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de auxílio possível.</h1>
+            <div class="depoiment__avatar">
+                <img src="images/avatar.png" alt="Avatar da Júlia Castro">
+            </div>
+            <h3>Júlia Castro</h3>
+            <span>Desenvolvedora Web</span>
+        </article>
+    </section>
+    <aside class="form">
+        <div class="form__head">
+            <h1>Acompanhe as nossas oportunidades</h1>
+            <p>Seja o primeiro a saber quando novas vagas serão abertas!</p>
+        </div>
+        <div class="form__info">
+            <input type="text" value="Seu e-mail" id="email">
+            <input type="button" value="Cadastrar" id="cadastro">
+            <p>© 2022 OptimusTech. Todos os direitos reservados.</p>
+        </div>
+    </aside>
 </body>
 </html>
