--- a/desafios/d015/index.html
+++ b/desafios/d015/index.html
@@ -111,8 +111,8 @@
             <p>Seja o primeiro a saber quando novas vagas serão abertas!</p>
         </div>
         <div class="form__info">
-            <input type="text" value="Seu e-mail" id="email">
-            <input type="button" value="Cadastrar" id="cadastro">
+            <input type="email" placeholder="Seu e-mail" id="email">
+            <button id="cadastro">Cadastrar</button>
             <p>© 2022 OptimusTech. Todos os direitos reservados.</p>
         </div>
     </aside>
