--- a/exercicios/ex028/iframe01.html
+++ b/exercicios/ex028/iframe01.html
@@ -1,1 +1,15 @@
-!
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Usando IFrame</title>
+</head>
+<body>
+    <h1>Testando o uso de um iframe.</h1>
+    <p>Acessando o site do <iframe src="https://www.cursoemvideo.com/" frameborder="0" scolling="no"></iframe> para aprender a programar</p>
+    <p>Vídeo sobre Iframe do Curso em Vídeo: <iframe width="560" height="315" src="https://www.youtube.com/embed/GWULnkTnapM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+    <p>O site do <iframe src="https://www.google.com/" frameborder="0"></iframe> também é muito legal</p>
+</body>
+</html>
